[build-system]
requires = ["hatchling>=1.25.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "envtether"
dynamic = ["version"]
description = "Static Configuration Intelligence for Modern Python Applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "envtether contributors" },
]
keywords = [
    "configuration",
    "environment",
    "dotenv",
    "secrets",
    "security",
    "linting",
    "static-analysis",
    "devops",
    "ci-cd",
    "docker",
    "kubernetes",
    "terraform",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "networkx>=3.3",
    "orjson>=3.10.0",
    "pyyaml>=6.0.1",
    "tomli>=2.0.1; python_version < '3.11'",
    "jinja2>=3.1.4",
    "click>=8.1.7",
]

[project.optional-dependencies]
graph = [
    "pygraphviz>=1.13",
    "matplotlib>=3.9.0",
]
all = [
    "envtether[graph]",
]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-snapshot>=0.9.0",
    "pytest-xdist>=3.5.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
    "types-PyYAML>=6.0.12",
    "types-orjson>=3.6.2",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/envtether/envtether"
Documentation = "https://envtether.dev"
Repository = "https://github.com/envtether/envtether"
Issues = "https://github.com/envtether/envtether/issues"
Changelog = "https://github.com/envtether/envtether/blob/main/CHANGELOG.md"

[project.scripts]
envtether = "envtether.cli.app:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "calver-by-date"

[tool.hatch.build.targets.sdist]
include = ["/src/envtether"]

[tool.hatch.build.targets.wheel]
packages = ["src/envtether"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific
    "PT",     # flake8-pytest-style
    "ERA",    # eradicate
    "PL",     # pylint
    "PERF",   # perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "TID",    # flake8-tidy-imports
]
ignore = [
    "S101",     # assert allowed in tests
    "S603",     # subprocess calls
    "S607",     # partial executable path
    "PLR0913",  # too many arguments
    "PLR2004",  # magic values
    "E501",     # line too long (ruff format handles formatting; long strings/regex are fine)
    "PLR0911",  # too many return statements (needed for file classification rules)
    "PLR0912",  # too many branches (needed for classifier logic)
    "PLR0915",  # too many statements
    "PLC0415",  # inline imports (used in test cases to avoid scope pollution)
    "SIM102",   # nested ifs (sometimes preferred for readability)
    "PERF401",  # list comprehension performance suggestions
    "RUF001",   # ambiguous unicode characters (intentional for emojis like ℹ️)
    "RUF012",   # mutable class attributes (intentional for class-level configuration variables)
    "N815",     # mixedCase in class scope (intentional for ast.NodeVisitor method overrides)
    "ERA001",   # commented-out code (intentional descriptive comments explaining code constructs)
    "S104",     # binding to all interfaces (intentional in hostname whitelist sets like 0.0.0.0)
    "S105",     # possible hardcoded password (intentional enum constant name strings)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["envtether"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "pygraphviz.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "snapshot: marks snapshot tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources",
]

[tool.coverage.run]
source = ["envtether"]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
fail_under = 90
